--- a/HW_2.ipynb
+++ b/HW_2.ipynb
@@ -106,7 +106,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -121,16 +121,16 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "[<matplotlib.lines.Line2D at 0x24c8868cac8>]"
+       "[<matplotlib.lines.Line2D at 0x1d9d7312390>]"
       ]
      },
-     "execution_count": 2,
+     "execution_count": 3,
      "metadata": {},
      "output_type": "execute_result"
     },
@@ -171,10 +171,10 @@
        "      <defs>\r\n",
        "       <path d=\"M 0 0 \r\n",
        "L 0 3.5 \r\n",
-       "\" id=\"m49b89bc0d5\" style=\"stroke:#000000;stroke-width:0.8;\"/>\r\n",
+       "\" id=\"m01d27711a4\" style=\"stroke:#000000;stroke-width:0.8;\"/>\r\n",
        "      </defs>\r\n",
        "      <g>\r\n",
-       "       <use style=\"stroke:#000000;stroke-width:0.8;\" x=\"51.582285\" xlink:href=\"#m49b89bc0d5\" y=\"228.14\"/>\r\n",
+       "       <use style=\"stroke:#000000;stroke-width:0.8;\" x=\"51.582285\" xlink:href=\"#m01d27711a4\" y=\"228.14\"/>\r\n",
        "      </g>\r\n",
        "     </g>\r\n",
        "     <g id=\"text_1\">\r\n",
@@ -210,7 +210,7 @@
        "    <g id=\"xtick_2\">\r\n",
        "     <g id=\"line2d_2\">\r\n",
        "      <g>\r\n",
-       "       <use style=\"stroke:#000000;stroke-width:0.8;\" x=\"102.343398\" xlink:href=\"#m49b89bc0d5\" y=\"228.14\"/>\r\n",
+       "       <use style=\"stroke:#000000;stroke-width:0.8;\" x=\"102.343398\" xlink:href=\"#m01d27711a4\" y=\"228.14\"/>\r\n",
        "      </g>\r\n",
        "     </g>\r\n",
        "     <g id=\"text_2\">\r\n",
@@ -251,7 +251,7 @@
        "    <g id=\"xtick_3\">\r\n",
        "     <g id=\"line2d_3\">\r\n",
        "      <g>\r\n",
-       "       <use style=\"stroke:#000000;stroke-width:0.8;\" x=\"153.104512\" xlink:href=\"#m49b89bc0d5\" y=\"228.14\"/>\r\n",
+       "       <use style=\"stroke:#000000;stroke-width:0.8;\" x=\"153.104512\" xlink:href=\"#m01d27711a4\" y=\"228.14\"/>\r\n",
        "      </g>\r\n",
        "     </g>\r\n",
        "     <g id=\"text_3\">\r\n",
@@ -282,7 +282,7 @@
        "    <g id=\"xtick_4\">\r\n",
        "     <g id=\"line2d_4\">\r\n",
        "      <g>\r\n",
-       "       <use style=\"stroke:#000000;stroke-width:0.8;\" x=\"203.865625\" xlink:href=\"#m49b89bc0d5\" y=\"228.14\"/>\r\n",
+       "       <use style=\"stroke:#000000;stroke-width:0.8;\" x=\"203.865625\" xlink:href=\"#m01d27711a4\" y=\"228.14\"/>\r\n",
        "      </g>\r\n",
        "     </g>\r\n",
        "     <g id=\"text_4\">\r\n",
@@ -298,7 +298,7 @@
        "    <g id=\"xtick_5\">\r\n",
        "     <g id=\"line2d_5\">\r\n",
        "      <g>\r\n",
-       "       <use style=\"stroke:#000000;stroke-width:0.8;\" x=\"254.626738\" xlink:href=\"#m49b89bc0d5\" y=\"228.14\"/>\r\n",
+       "       <use style=\"stroke:#000000;stroke-width:0.8;\" x=\"254.626738\" xlink:href=\"#m01d27711a4\" y=\"228.14\"/>\r\n",
        "      </g>\r\n",
        "     </g>\r\n",
        "     <g id=\"text_5\">\r\n",
@@ -340,7 +340,7 @@
        "    <g id=\"xtick_6\">\r\n",
        "     <g id=\"line2d_6\">\r\n",
        "      <g>\r\n",
-       "       <use style=\"stroke:#000000;stroke-width:0.8;\" x=\"305.387852\" xlink:href=\"#m49b89bc0d5\" y=\"228.14\"/>\r\n",
+       "       <use style=\"stroke:#000000;stroke-width:0.8;\" x=\"305.387852\" xlink:href=\"#m01d27711a4\" y=\"228.14\"/>\r\n",
        "      </g>\r\n",
        "     </g>\r\n",
        "     <g id=\"text_6\">\r\n",
@@ -356,7 +356,7 @@
        "    <g id=\"xtick_7\">\r\n",
        "     <g id=\"line2d_7\">\r\n",
        "      <g>\r\n",
-       "       <use style=\"stroke:#000000;stroke-width:0.8;\" x=\"356.148965\" xlink:href=\"#m49b89bc0d5\" y=\"228.14\"/>\r\n",
+       "       <use style=\"stroke:#000000;stroke-width:0.8;\" x=\"356.148965\" xlink:href=\"#m01d27711a4\" y=\"228.14\"/>\r\n",
        "      </g>\r\n",
        "     </g>\r\n",
        "     <g id=\"text_7\">\r\n",
@@ -410,10 +410,10 @@
        "      <defs>\r\n",
        "       <path d=\"M 0 0 \r\n",
        "L -3.5 0 \r\n",
-       "\" id=\"m029226d860\" style=\"stroke:#000000;stroke-width:0.8;\"/>\r\n",
+       "\" id=\"m464680eb2f\" style=\"stroke:#000000;stroke-width:0.8;\"/>\r\n",
        "      </defs>\r\n",
        "      <g>\r\n",
-       "       <use style=\"stroke:#000000;stroke-width:0.8;\" x=\"36.465625\" xlink:href=\"#m029226d860\" y=\"218.256364\"/>\r\n",
+       "       <use style=\"stroke:#000000;stroke-width:0.8;\" x=\"36.465625\" xlink:href=\"#m464680eb2f\" y=\"218.256364\"/>\r\n",
        "      </g>\r\n",
        "     </g>\r\n",
        "     <g id=\"text_8\">\r\n",
@@ -437,7 +437,7 @@
        "    <g id=\"ytick_2\">\r\n",
        "     <g id=\"line2d_9\">\r\n",
        "      <g>\r\n",
-       "       <use style=\"stroke:#000000;stroke-width:0.8;\" x=\"36.465625\" xlink:href=\"#m029226d860\" y=\"186.656544\"/>\r\n",
+       "       <use style=\"stroke:#000000;stroke-width:0.8;\" x=\"36.465625\" xlink:href=\"#m464680eb2f\" y=\"186.656544\"/>\r\n",
        "      </g>\r\n",
        "     </g>\r\n",
        "     <g id=\"text_9\">\r\n",
@@ -453,7 +453,7 @@
        "    <g id=\"ytick_3\">\r\n",
        "     <g id=\"line2d_10\">\r\n",
        "      <g>\r\n",
-       "       <use style=\"stroke:#000000;stroke-width:0.8;\" x=\"36.465625\" xlink:href=\"#m029226d860\" y=\"155.056725\"/>\r\n",
+       "       <use style=\"stroke:#000000;stroke-width:0.8;\" x=\"36.465625\" xlink:href=\"#m464680eb2f\" y=\"155.056725\"/>\r\n",
        "      </g>\r\n",
        "     </g>\r\n",
        "     <g id=\"text_10\">\r\n",
@@ -488,7 +488,7 @@
        "    <g id=\"ytick_4\">\r\n",
        "     <g id=\"line2d_11\">\r\n",
        "      <g>\r\n",
-       "       <use style=\"stroke:#000000;stroke-width:0.8;\" x=\"36.465625\" xlink:href=\"#m029226d860\" y=\"123.456905\"/>\r\n",
+       "       <use style=\"stroke:#000000;stroke-width:0.8;\" x=\"36.465625\" xlink:href=\"#m464680eb2f\" y=\"123.456905\"/>\r\n",
        "      </g>\r\n",
        "     </g>\r\n",
        "     <g id=\"text_11\">\r\n",
@@ -536,7 +536,7 @@
        "    <g id=\"ytick_5\">\r\n",
        "     <g id=\"line2d_12\">\r\n",
        "      <g>\r\n",
-       "       <use style=\"stroke:#000000;stroke-width:0.8;\" x=\"36.465625\" xlink:href=\"#m029226d860\" y=\"91.857086\"/>\r\n",
+       "       <use style=\"stroke:#000000;stroke-width:0.8;\" x=\"36.465625\" xlink:href=\"#m464680eb2f\" y=\"91.857086\"/>\r\n",
        "      </g>\r\n",
        "     </g>\r\n",
        "     <g id=\"text_12\">\r\n",
@@ -593,7 +593,7 @@
        "    <g id=\"ytick_6\">\r\n",
        "     <g id=\"line2d_13\">\r\n",
        "      <g>\r\n",
-       "       <use style=\"stroke:#000000;stroke-width:0.8;\" x=\"36.465625\" xlink:href=\"#m029226d860\" y=\"60.257266\"/>\r\n",
+       "       <use style=\"stroke:#000000;stroke-width:0.8;\" x=\"36.465625\" xlink:href=\"#m464680eb2f\" y=\"60.257266\"/>\r\n",
        "      </g>\r\n",
        "     </g>\r\n",
        "     <g id=\"text_13\">\r\n",
@@ -609,7 +609,7 @@
        "    <g id=\"ytick_7\">\r\n",
        "     <g id=\"line2d_14\">\r\n",
        "      <g>\r\n",
-       "       <use style=\"stroke:#000000;stroke-width:0.8;\" x=\"36.465625\" xlink:href=\"#m029226d860\" y=\"28.657447\"/>\r\n",
+       "       <use style=\"stroke:#000000;stroke-width:0.8;\" x=\"36.465625\" xlink:href=\"#m464680eb2f\" y=\"28.657447\"/>\r\n",
        "      </g>\r\n",
        "     </g>\r\n",
        "     <g id=\"text_14\">\r\n",
@@ -624,7 +624,7 @@
        "    </g>\r\n",
        "   </g>\r\n",
        "   <g id=\"line2d_15\">\r\n",
-       "    <path clip-path=\"url(#p0cdcb02f3e)\" d=\"M 51.683807 218.256364 \r\n",
+       "    <path clip-path=\"url(#pce197f3e07)\" d=\"M 51.683807 218.256364 \r\n",
        "L 73.511086 218.145356 \r\n",
        "L 77.267408 217.883687 \r\n",
        "L 80.008508 217.472127 \r\n",
@@ -735,7 +735,7 @@
        "  </g>\r\n",
        " </g>\r\n",
        " <defs>\r\n",
-       "  <clipPath id=\"p0cdcb02f3e\">\r\n",
+       "  <clipPath id=\"pce197f3e07\">\r\n",
        "   <rect height=\"217.44\" width=\"334.8\" x=\"36.465625\" y=\"10.7\"/>\r\n",
        "  </clipPath>\r\n",
        " </defs>\r\n",
@@ -766,7 +766,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [
     {
@@ -788,6 +788,34 @@
     "        print(f'Как минимум надо выстрелить {limit_num} раз, чтобы вероятность попадания была более {summ}')\n",
     "        break"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 7,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "0.06069965889729536"
+      ]
+     },
+     "execution_count": 7,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "f = (1430*p)**k * math.exp(-1430*p) / math.factorial(k)\n",
+    "f"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
   }
  ],
  "metadata": {
