--- a/HW_3.ipynb
+++ b/HW_3.ipynb
@@ -388,12 +388,13 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "Вероятность того, что наугад выбранный студент из группы А: $$Р(А) = 1/4$$ из В: $$Р(В) = 1/4$$ из С: $$Р(С) = 2/4$$\n",
+    "Вероятность того, что наугад выбранный студент из группы А: $$P(A) = 1/4$$ из В: $$P(B) = 1/4$$ из С: $$P(C) = 2/4$$\n",
     "\n",
-    "Вероятность сдачи экзамена студентом из группы А: $$Р(сдал|А) = 0.8$$ из В: $$Р(сдал|В) = 0.7$$ из С: $$Р(сдал|С) = 0.9$$\n",
+    "Вероятность сдачи экзамена студентом из группы А: $$P(pass|A) = 0.8$$ из В: $$P(pass|B) = 0.7$$ из С: $$P(pass|C) = 0.9$$\n",
     "\n",
     "Полная вероятность того, что студент сдал:\n",
-    "$$Р(сдал) = Р(А) \\cdot Р(сдал|А) + Р(В) \\cdot Р(сдал|В) + Р(С) \\cdot Р(сдал|С) = 0.25 \\cdot 0.8 + 0.25 \\cdot 0.7 + 0.5 \\cdot 0.9 = 0.2 + 0.175 + 0.45 = 0.825$$"
+    "\n",
+    "$$P(pass) = P(A) \\cdot P(pass|A) + P(B) \\cdot P(pass|B) + P(C) \\cdot P(pass|C) = 0.25 \\cdot 0.8 + 0.25 \\cdot 0.7 + 0.5 \\cdot 0.9 = 0.2 + 0.175 + 0.45 = 0.825$$"
    ]
   },
   {
@@ -401,10 +402,20 @@
    "metadata": {},
    "source": [
     "Тогда соответствующие вероятности, что сдавший экзамен студент из группы А, В или С соответственно:\n",
-    "$$ P(A|сдал) = \\frac{Р(А) \\cdot Р(сдал|А)} {Р(сдал)} = \\frac{0.25 \\cdot 0.8} {0.825} = 0.24242424242424246 $$\n",
-    "$$ P(B|сдал) = \\frac{Р(B) \\cdot Р(сдал|B)} {Р(сдал)} = \\frac{0.25 \\cdot 0.7} {0.825} = 0.21212121212121213 $$ \n",
-    "$$ P(C|сдал) = \\frac{Р(C) \\cdot Р(сдал|C)} {Р(сдал)} = \\frac{0.5 \\cdot 0.9} {0.825} = 0.5454545454545455 $$"
+    "\n",
+    "$$ P(A|pass) = \\frac{P(A) \\cdot P(pass|A)} {P(pass)} = \\frac{0.25 \\cdot 0.8} {0.825} = 0.24242424242424246 $$\n",
+    "\n",
+    "$$ P(B|pass) = \\frac{P(B) \\cdot P(pass|B)} {P(pass)} = \\frac{0.25 \\cdot 0.7} {0.825} = 0.21212121212121213 $$ \n",
+    "\n",
+    "$$ P(C|pass) = \\frac{P(C) \\cdot P(pass|C)} {P(pass)} = \\frac{0.5 \\cdot 0.9} {0.825} = 0.5454545454545455 $$"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
   }
  ],
  "metadata": {
