--- a/HW_3.ipynb
+++ b/HW_3.ipynb
@@ -398,24 +398,111 @@
    ]
   },
   {
+   "cell_type": "code",
+   "execution_count": 1,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "0.825"
+      ]
+     },
+     "execution_count": 1,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "0.25 * 0.8 + 0.25 * 0.7 + 0.5 * 0.9"
+   ]
+  },
+  {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "Тогда соответствующие вероятности, что сдавший экзамен студент из группы А, В или С соответственно:\n",
+    "Тогда вероятность, что сдавший экзамен студент из группы А:\n",
     "\n",
-    "$$ P(A|pass) = \\frac{P(A) \\cdot P(pass|A)} {P(pass)} = \\frac{0.25 \\cdot 0.8} {0.825} = 0.24242424242424246 $$\n",
-    "\n",
-    "$$ P(B|pass) = \\frac{P(B) \\cdot P(pass|B)} {P(pass)} = \\frac{0.25 \\cdot 0.7} {0.825} = 0.21212121212121213 $$ \n",
-    "\n",
-    "$$ P(C|pass) = \\frac{P(C) \\cdot P(pass|C)} {P(pass)} = \\frac{0.5 \\cdot 0.9} {0.825} = 0.5454545454545455 $$"
+    "$$ P(A|pass) = \\frac{P(A) \\cdot P(pass|A)} {P(pass)} $$"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 2,
    "metadata": {},
-   "outputs": [],
-   "source": []
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "0.24242424242424246"
+      ]
+     },
+     "execution_count": 2,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "0.25 * 0.8 / 0.825"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Вероятность, что сдавший экзамен студент из группы В:\n",
+    "\n",
+    "$$ P(B|pass) = \\frac{P(B) \\cdot P(pass|B)} {P(pass)} $$ "
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 3,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "0.21212121212121213"
+      ]
+     },
+     "execution_count": 3,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "0.25 * 0.7 / 0.825"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Вероятность, что сдавший экзамен студент из группы С:\n",
+    "\n",
+    "$$ P(C|pass) = \\frac{P(C) \\cdot P(pass|C)} {P(pass)} $$"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 5,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "0.5454545454545455"
+      ]
+     },
+     "execution_count": 5,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "0.5 * 0.9 / 0.825"
+   ]
   }
  ],
  "metadata": {
