--- a/HW_5.ipynb
+++ b/HW_5.ipynb
@@ -75,11 +75,11 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "Выбранный уровень значимости $\\alpha = 0.05$ означает, что для проверки гипотезы о среднем значении $a = 17$ требуется, чтобы с вероятностью 95% выборочное среднее попадало в правосторонний интервал, который (по правилу 2-х сигм) равен $(a, a + 2 \\cdot \\sigma)$. \n",
+    "Выбранный уровень значимости $\\alpha = 0.05$ означает, что для проверки гипотезы о среднем значении a = 17 требуется, чтобы с вероятностью 95% выборочное среднее попадало в правосторонний интервал, который (по правилу 2-х сигм) равен $(a, a + 2 \\cdot \\sigma)$. \n",
     "\n",
-    "Наоборот, критическая область равна $(a + 2 \\cdot \\sigma, +  ∞)$ и если выборочное среднее = 17.5 попадёт в критическую область, то основная гипотеза отвергается. \n",
+    "То есть критическая область лежит правее точки $a + 2 \\cdot \\sigma $ и если выборочное среднее = 17.5 попадёт в критическую область, то основная гипотеза отвергается. \n",
     "\n",
-    "Значение выборочного среднего = 17.5 попадает в критическую область = $(a + 2 \\cdot \\sigma, + ∞) = (17.4, + ∞)$ => $гипотеза$ о том, что шарики для подшипников имеют средний диаметр 17 мм, при выбранном уровне значимости $\\alpha = 0.05$ $отвергается$."
+    "Значение выборочного среднего = 17.5 попадает в критическую область правее точки $ a + 2 \\cdot \\sigma = 17.4 $ => гипотеза о том, что шарики для подшипников имеют средний диаметр 17 мм, при выбранном уровне значимости $\\alpha = 0.05$ отвергается."
    ]
   },
   {
@@ -288,8 +288,15 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "Доверительный интервал, построенный с учётом доверительной вероятности 99% = $(197.7, 199.2)$, не включает значение предполагаемого среднего значения $а = 200$ => $утверждение$ продавца, что средний вес пачки = 200 гр, $не \\: верно$."
+    "Доверительный интервал, построенный с учётом доверительной вероятности 99% = (197.7, 199.2), не включает значение предполагаемого среднего значения а = 200 => утверждение продавца, что средний вес пачки = 200 гр, не верно."
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
   }
  ],
  "metadata": {
