--- a/HW_6.ipynb
+++ b/HW_6.ipynb
@@ -250,7 +250,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 14,
    "metadata": {},
    "outputs": [
     {
@@ -259,7 +259,7 @@
        "10.54566788359614"
       ]
      },
-     "execution_count": 10,
+     "execution_count": 14,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -271,19 +271,19 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 15,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Доверительный интервал с 95% надёжностью равен ( 97.01,  139.19)\n"
+      "Доверительный интервал с 95% надёжностью равен ( 111.43,  124.77)\n"
      ]
     }
    ],
    "source": [
-    "print(f'Доверительный интервал с 95% надёжностью равен ({m - 2 * sigma: .2f}, {m + 2 * sigma: .2f})')"
+    "print(f'Доверительный интервал с 95% надёжностью равен ({m - 2 * sigma/np.sqrt(iq.shape[0]): .2f}, {m + 2 * sigma/np.sqrt(iq.shape[0]): .2f})')"
    ]
   },
   {
@@ -304,7 +304,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 16,
    "metadata": {},
    "outputs": [
     {
